# AF_ClaSeq

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  run_af_claseq_pipeline.py  setup.py
docs/: methods.aux  methods.fdb_latexmk  methods.fls  methods.out  workflow.fdb_latexmk  workflow.fls
examples/: config_run.yaml
examples/KaiB/: KaiB_example_msa_input.a3m
examples/KaiB/configs/: config_2qke_5jyt_tmscore.json  config_run.yaml
examples/KaiB/default/: KaiB_example_msa_input.a3m  log.txt  (+6 more)
examples/configs/: config_2qke_5jyt_tmscore.json
examples/default/: 2QKEE_colabfold-8128Seqs.a3m  2QKEE_colabfold-8128Seqs_predicted_aligned_error_v1.json  2QKEE_colabfold-8128Seqs_scores_rank_001_alphafold2_ptm_model_4_seed_000.json  2QKEE_colabfold-8128Seqs_scores_rank_002_alphafold2_ptm_model_3_seed_000.json  2QKEE_colabfold-8128Seqs_scores_rank_003_alphafold2_ptm_model_5_seed_000.json  2QKEE_colabfold-8128Seqs_scores_rank_004_alphafold2_ptm_model_2_seed_000.json  2QKEE_colabfold-8128Seqs_scores_rank_005_alphafold2_ptm_model_1_seed_000.json  log.txt
pipeline_test/: config_run.yaml
pipeline_test/default/: RASK_HUMAN_1-169.a3m  RASK_HUMAN_1-169.fasta  RASK_HUMAN_1-169_predicted_aligned_error_v1.json  RASK_HUMAN_1-169_test.a3m  log.txt
scripts/: 01_iteration_shuffling_a3m-combine.py  01_iteration_shuffling_plot.py  01_iterative_shuffling_run.py  02_M_fold_sampling_run.py  02_M_fold_sampling_run_localgpu.py  02_sampling_2D_CV.py  02_sampling_plot_1D_CV.py  02_sampling_plot_2D_CV.py  03_sequence_voting_run.py  04_prediction.py  04_prediction_run.py  04_recompile_run.py  05_plot.py  06_tree.py  local_plddt.py  minmax.py  ref_pdb_process.py
scripts/backup/: 03_sequence_voting_run-backup.py  04_recompile_run-backup.py
src/af_claseq/: local_gpu_utils.py  m_fold_sampling.py  plotting_manager.py  sequence_processing.py  slurm_utils.py  structure_analysis.py  voting-backup.py  voting.py
src/af_claseq.egg-info/: PKG-INFO  SOURCES.txt
src/af_vote/: bayesian_sampling.py  m_fold_sampling.py  plotting_manager.py  sequence_processing.py  slurm_utils.py  structure_analysis.py  utils.py  voting-backup2.py  voting.py
src/af_vote.egg-info/: PKG-INFO  SOURCES.txt
(+487 files in other folders)
